--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16,6 +16,21 @@ body {
     margin: 0 auto;
 }
 
+.flex {
+    display: flex;
+}
+
+.btn-contato button {
+    padding: 10px 40px;
+    font-size:18px;
+    font-weight: 600;
+    background-color: #FFD700;
+    border: 0;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: .2s;
+}
+
 /* ESTILO DO CABEÇALHO */
 header {
     padding: 40px 4%;
@@ -48,16 +63,49 @@ header nav ul li {
     padding: 0 40px;
 }
 
-header .btn-contato button {
-    padding: 10px 40px;
-    font-size:18px;
-    font-weight: 600;
-    background-color: #FFD700;
-    border: 0;
-    border-radius: 20px;
-    cursor: pointer;
+.btn-contato button:hover {
+    box-shadow: 0px 0px 8px #ffd90070;
+    transform: scale(1.05);
 }
 
-header .btn-contato button:hover {
-    box-shadow: 0px 0px 8px #ffd90070;
+/* ESTILO DO TOPO DO SITE */
+section.topo-do-site {
+    padding: 100px 4%;
+}
+
+section.topo-do-site .flex {
+    align-items: center;
+    justify-content: center;
+    gap: 90px;
+}
+
+.topo-do-site h1 {
+    color: #FFF;
+    font-size: 38px;
+    line-height: 40px;
+}
+
+.topo-do-site .txt-topo-site h1 span {
+    color:#FFD700;
+}
+
+.topo-do-site .txt-topo-site p {
+    color: #c5c4c4;
+    margin: 30px 0;
+}
+
+.topo-do-site .img-topo-site img {
+    border: 0;
+    border-radius: 40px;
+    position: relative;
+    animation: flutuar 2s ease-in-out infinite alternate;
+}
+
+@keyframes flutuar {
+    0% {
+        top: 0;
+    }
+    100% {
+        top: 30px;
+    }
 }
