--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #000000ef;
+    background-color: #0e0e0eef;
     height: 100vh;
 }
 
@@ -83,6 +83,7 @@ section.topo-do-site .flex {
     color: #FFF;
     font-size: 38px;
     line-height: 40px;
+    filter: drop-shadow(10px 10px 10px #000000);
 }
 
 .topo-do-site .txt-topo-site h1 span {
@@ -95,10 +96,9 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .img-topo-site img {
-    border: 0;
-    border-radius: 40px;
     position: relative;
     animation: flutuar 2s ease-in-out infinite alternate;
+    filter: drop-shadow(10px 10px 10px #000000)
 }
 
 @keyframes flutuar {
@@ -108,4 +108,35 @@ section.topo-do-site .flex {
     100% {
         top: 30px;
     }
+}
+
+/* ESTILO DO QUEM SOMOS*/
+section.quem-somos {
+    padding: 90px 4%;
+}
+
+section.quem-somos .flex {
+    align-items: center;
+    justify-content: center;
+    gap: 150px;
+}
+
+.quem-somos h2 {
+    color: #f7e376;
+    font-size: 30px;
+    line-height: 40px;
+    line-height: 1.6;
+    filter: drop-shadow(10px 10px 10px #000000);
+}
+
+.quem-somos .txt-sobre p {
+    color: #c5c4c4;
+    margin: 20px 0;
+    margin-bottom: 50px;
+}
+
+.quem-somos .img-sobre img {
+    filter: drop-shadow(10px 10px 10px #000000);
+    position: relative;
+    animation: flutuar 2s ease-in-out infinite alternate;
 }
