--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -121,11 +121,10 @@ section.quem-somos .flex {
     gap: 150px;
 }
 
-.quem-somos h2 {
+.quem-somos .txt-sobre h2 {
     color: #f7e376;
     font-size: 30px;
     line-height: 40px;
-    line-height: 1.6;
     filter: drop-shadow(10px 10px 10px #000000);
 }
 
@@ -133,6 +132,7 @@ section.quem-somos .flex {
     color: #c5c4c4;
     margin: 20px 0;
     margin-bottom: 50px;
+    line-height: 1.6;
 }
 
 .quem-somos .img-sobre img {
@@ -140,3 +140,38 @@ section.quem-somos .flex {
     position: relative;
     animation: flutuar 2s ease-in-out infinite alternate;
 }
+
+/* ESTILIZAÇÃO DOS NOSSOS SERVIÇOS */
+section .servicos {
+    text-align: center;
+}
+
+.servicos .interface {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.txt-servicos h2 {
+    color: #FFF;
+    filter: drop-shadow(10px 10px 10px #000000);
+    margin-bottom: 30px;
+    font-size: 30px;
+}
+
+.lista-servicos ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.lista-servicos li {
+    color: #d6d0a9;
+    margin: 0 30px 30px 30px;
+    text-align: center;
+    max-width: 300px;
+    filter: drop-shadow(10px 10px 10px #000000);
+}
+
