--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -170,7 +170,7 @@ section .servicos {
 .lista-servicos li {
     padding: 20px;
     color: #d6d0a9;
-    margin: 0 30px 30px 30px;
+    font-size: 20px;
     text-align: center;
     max-width: 300px;
     filter: drop-shadow(10px 10px 10px #000000);
@@ -178,8 +178,7 @@ section .servicos {
 
 .servicos .img-servicos img {
     margin: 10px;
-    border-top: 50px;
-    border-bottom: 50px;
+    margin-top: 40px;
     border-radius: 20px;
     filter: drop-shadow(10px 10px 10px #000000);
 }
