feat: adiciona e estiliza texto de descrição dos serviços

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -187,3 +187,9 @@ section .servicos {
     transform: scale(1.10);
     transition: .2s;
 }
+
+.servicos .descricao p {
+    margin-top: 40px;
+    color: #FFF;
+    font-size: 18px;
+}
