--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -31,6 +31,11 @@ body {
     transition: .2s;
 }
 
+button:hover {
+    box-shadow: 0px 0px 8px #ffd90070;
+    transform: scale(1.05);
+}
+
 /* ESTILO DO CABEÇALHO */
 header {
     padding: 40px 4%;
@@ -61,11 +66,6 @@ header nav ul {
 header nav ul li {
     display: inline-block;
     padding: 0 40px;
-}
-
-.btn-contato button:hover {
-    box-shadow: 0px 0px 8px #ffd90070;
-    transform: scale(1.05);
 }
 
 /* ESTILO DO TOPO DO SITE */
@@ -224,4 +224,16 @@ section.orcamento .img-orcamento img {
     filter: drop-shadow(10px 10px 10px #000000);
     position: relative;
     animation: flutuar 2s ease-in-out infinite alternate;
+}
+
+.orcamento .txt-orcamento .btn-social button {
+    width: 60px;
+    height: 60px;
+    border: none;
+    border-radius: 50%;
+    background-color: #FFD700;
+    font-size: 25px;
+    cursor: pointer;
+    margin: 30px 30px;
+    transition: .2s;
 }
