--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -237,3 +237,44 @@ section.orcamento .img-orcamento img {
     margin: 30px 30px;
     transition: .2s;
 }
+
+/* ESTILO DO RODAPÉ */
+
+footer {
+    padding: 30px 4%;
+    box-shadow: 0 0 40px 10px #ffffff1d;
+}
+
+footer .flex {
+    justify-content: space-between;
+}
+
+footer .btn-social button {
+    width: 60px;
+    height: 60px;
+    border: none;
+    border-radius: 50%;
+    background-color: #FFD700;
+    font-size: 22px;
+    cursor: pointer;
+    margin: 0 5px;
+    transition: .2s;
+}
+
+footer .line-footer {
+    padding: 30px 0;
+}
+
+.borda {
+    border-top: 2px solid #FFD700;
+}
+
+footer .line-footer p i {
+    color: #bd0000;
+    font-size: 22px;
+}
+
+footer .line-footer p a {
+    color: #fff;
+    text-decoration: none;
+}
