--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -69,6 +69,10 @@ header nav.menu-desktop ul li {
 }
 
 /* ESTILO DO MENU MOBILE */
+.btn-abrir-menu {
+    display: none;
+}
+
 .btn-abrir-menu i {
     color: #FFD700;
     font-size: 40px;
@@ -83,7 +87,16 @@ header nav.menu-desktop ul li {
     z-index: 99999;
     width: 0%;
     overflow: hidden;
+    transition: .4s;
 }
+
+.menu-mobile.abrir-menu {
+    width: 70%;
+}
+
+.menu-mobile.abrir-menu ~ .overlay-menu {
+    display: block;
+} 
 
 .menu-mobile .btn-fechar {
     padding: 20px 5%;
@@ -112,7 +125,7 @@ header nav.menu-desktop ul li {
 }
 
 .overlay-menu {
-    background-color: #000000b0;
+    background-color: #000000d0;
     width: 100%;
     height: 100%;
     position: fixed;
@@ -352,6 +365,11 @@ footer .line-footer p a {
 
     .orcamento .flex {
         flex-direction: column-reverse;
+    }
+
+    /* MENU MOBILE */
+    .btn-abrir-menu {
+        display: block;
     }
 
     /* CABEÇALHO */
